сохраняюсь перед мефакторингом генерации фейковых картинок, я решил совместить генерацию Sku и Cargo